Adding fields and parameters

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,6 +21,8 @@
     <%= form.text_field :short_description %>
   </div>
 
+
+
   <div class="field">
     <%= form.label :long_description %>
     <%= form.text_area :long_description %>
@@ -44,6 +46,11 @@
   <div class="field">
     <%= form.label :image %>
     <%= form.text_field :image %>
+  </div>
+
+      <div class="field">
+    <%= form.label :featured %>
+    <%= form.check_box :featured %>
   </div>
 
   <div class="actions">
