--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,12 @@
   <body>
     <%= yield %>
     <%= render partial: 'layouts/sidebar' %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <% if(current_user.present?) %>
+     <%= current_user.email %>
+     <%= link_to('Log out', destroy_user_session_path(), method: :delete) %>
+   <% end %>
   </body>
 </html>
