--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -53,6 +53,11 @@
     <%= form.check_box :featured %>
   </div>
 
+  <div class="field">
+    <%= form.label :category_id %>
+    <%= form.collection_select(:category_id, Category.all, :id, :name) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
