--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,16 @@
   </head>
    
   <body>
-    <%= yield %>
-    <%= render partial: 'layouts/sidebar' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-    <% if(current_user.present?) %>
-     <%= current_user.email %>
-     <%= link_to('Log out', destroy_user_session_path(), method: :delete) %>
-   <% end %>
+    <div class="container">
+      <% if(current_user.present?) %>
+        <%= current_user.email %>
+        <%= link_to('Log out', destroy_user_session_path(), method: :delete) %>
+      <% end %>
+    
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+      <%= render partial: 'layouts/sidebar' %>
+    </div>S
   </body>
 </html>
