--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,6 @@
       <p class="alert"><%= alert %></p>
       <%= yield %>
       <%= render partial: 'layouts/sidebar' %>
-    </div>S
+    </div>
   </body>
 </html>
