--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -13,5 +13,5 @@
     <textarea name="content" class="form-control" id="content"></textarea>
   </div>
 <%= recaptcha_tags %>
-  <input type="submit" class="btn btn-primary" value="Send email">
+  <input type="submit" class="btn btn-warning" value="Send email">
 </form> 
